--- a/Forum/Home/View/Index/index.html
+++ b/Forum/Home/View/Index/index.html
@@ -11,7 +11,7 @@
                                 <neq name="vos.category_image" value="">
                                 <img src="<!--{$vos.category_image}-->" border="0"/>		
                                 <else/>
-                                <img src="__BBSPUBLIC__/Resources/Image/IE.png" width="90" height="68" border="0"/>		
+                                <img src="__PUBLIC__/Image/IE.png" width="90" height="68" border="0"/>		
                                 </neq>
                                </a>
                             </span>
