--- a/Forum/Home/View/layout.html
+++ b/Forum/Home/View/layout.html
@@ -3,37 +3,30 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>
-<if condition="$pageTitle neq '' ">
-<!--{$pageTitle}-->- __PROJECT_NAME__
-<else /> 首页- __PROJECT_NAME__
-</if>
+	<if condition="$pageTitle neq '' ">
+	<!--{$pageTitle}-->- __PROJECT_NAME__
+	<else /> 首页- __PROJECT_NAME__
+	</if>
 </title>
 <meta name="keywords" content="<!--{$keywords}--> -<!--{$pageTitle}-->-__PROJECT_NAME__" />
 <meta name="description" content="<!--{$description}-->- <!--{$pageTitle}-->-__PROJECT_NAME__" />
-
-<script src="__PUBLIC__/Resources/Script/jquery.js"></script>
-<script src="__PUBLIC__/Resources/Script/main.js"></script>
-<script type="text/javascript">
-	function search_txt(){
-			      $("#search-text").attr("value","");	
-			      		   
-	}
-</script>
+<script src="__PUBLIC__/Script/jquery.js"></script>
+<script src="__PUBLIC__/Script/main.js"></script>
+	<script type="text/javascript">
+		function search_txt(){
+				      $("#search-text").attr("value","");				      		   
+		}
+	</script>
 <link rel="stylesheet" href="__PUBLIC__/Css/style.css" />
 <link rel="stylesheet" href="__PUBLIC__/Css/default.css" />
 
-<style>
-   #sinaLink{
-	                        background:url("__BBSPUBLIC__/Resources/Image/site_v5.png") no-repeat scroll 0 -26px transparent;
-	                       }
-	                       #qqLink{
-	                        background:url("__BBSPUBLIC__/Resources/Image/site_v5.png") no-repeat scroll 0 -102px transparent;
-	                       }
-</style>
+	<style>
+	   #sinaLink{background:url("__PUBLIC__/Image/site_v5.png") no-repeat scroll 0 -26px transparent;}
+	   #qqLink{background:url("__PUBLIC__/Image/site_v5.png") no-repeat scroll 0 -102px transparent;}
+	</style>
 </head>
 <body>
 <div id="header-wrapper">
-
 	<div id="header">
 		<div id="menu">
 			<!-- 导航栏 -->
@@ -52,23 +45,17 @@
 				<fieldset>
 					<input name="words" type="text" id="search-text" onclick="search_txt();" value="<if condition='$_GET.words eq ""'>请输入关键字<else/><!--{$_GET.words}--></if>" size="15" />
 					<label>
-					<select name="a" id="search_select" class="search_select">
-					  <option value="title">搜索标题</option>
-					  <option value="fulltext">搜索全文</option>
-				    </select>
+						<select name="a" id="search_select" class="search_select">
+						  <option value="title">搜索标题</option>
+						  <option value="fulltext">搜索全文</option>
+					    </select>
 					</label>
-                    
 				<input type="submit" id="search-submit" class="search-submit" value="GO" />
 				</fieldset>
-              
 			</form>
             <script>
-			   function search_txt(){
-			      $("#search-text").attr("value","");			   
-			   }
-			
+			   function search_txt(){$("#search-text").attr("value","");}
 			</script>
-            
 		</div>
 		
 	</div>
@@ -89,7 +76,7 @@
 		</div>
 		<neq name="m" value="content">
 		<div id="sidebar">
-		<include file="Public:sidebar" />
+		       <include file="Public:sidebar" />
 		</div>
 		</neq>
 		<!-- end #sidebar -->
