--- a/Forum/Home/View/layout.html
+++ b/Forum/Home/View/layout.html
@@ -64,7 +64,7 @@
 <!-- end #header-wrapper -->
 <div id="logo">
 	<h1><a href="#">在线论坛 </a></h1>
-	<p><em>PHPMVC在线支持论坛 <a href="http://beauty-soft.net/book/php_mvc/">beauty-soft.net</a></em></p>
+	<!--<p><em>PHPMVC在线支持论坛 <a href="http://beauty-soft.net/book/php_mvc/">beauty-soft.net</a></em></p>-->
 </div>
 <hr />
 <!-- end #logo -->
@@ -86,7 +86,7 @@
 </div>
 <div id="footer">
 <input type="hidden" id="sys_url" name="sys_url" value="<!--tmp-$Think.config.SYS_URL-->" />
-	<p>Copyright (c) 2012 BeautySoft  by <a href="http://beauty-soft.com/book/php_mvc">beauty-soft.com</a>.</p>
+	<!--<p>Copyright (c) 2012 BeautySoft  by <a href="http://beauty-soft.com/book/php_mvc">beauty-soft.com</a>.</p>-->
 </div>
 <!-- end #footer -->
 </body>
